test/typecheck/reject/fail3.rift
let
  val x: i64 = "hello"
in
end
